# SoukobanGame

./: .gitignore
src/: CMakeLists.txt  Makefile  autoresolve.c  soukoban.c  soukoban.map
src/include/: common.h
